--- a/mapflow/static/ui/sentinel_auth_dialog.ui
+++ b/mapflow/static/ui/sentinel_auth_dialog.ui
@@ -32,7 +32,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string notr="true">Sentinel Hub Access Token</string>
+   <string>SkyWatch API Key</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
