--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string notr="true">Mapflow</string>
   </property>
-  <layout class="QVBoxLayout" name="mainLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
       <number>0</number>
@@ -298,7 +298,7 @@
          </column>
          <column>
           <property name="text">
-           <string>Area, sq.km</string>
+           <string>Area, sq. km</string>
           </property>
           <property name="textAlignment">
            <set>AlignCenter</set>
@@ -370,53 +370,7 @@
       <attribute name="title">
        <string>Providers</string>
       </attribute>
-      <layout class="QVBoxLayout" name="settingsLayout" stretch="0,0,0,1">
-       <item>
-        <layout class="QFormLayout" name="layoutOutputDirectory">
-         <item row="0" column="0">
-          <widget class="QLabel" name="labelOutputDirectory">
-           <property name="text">
-            <string>Output directory:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <layout class="QHBoxLayout" name="layoutOutputDirectoryInput">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QLineEdit" name="outputDirectory"/>
-           </item>
-           <item>
-            <widget class="QPushButton" name="selectOutputDirectory">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>29</width>
-               <height>29</height>
-              </size>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>29</width>
-               <height>29</height>
-              </size>
-             </property>
-             <property name="text">
-              <string notr="true">...</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
+      <layout class="QVBoxLayout" name="settingsLayout" stretch="0,0,1">
        <item>
         <layout class="QHBoxLayout" name="provider" stretch="1,0,0,2,0,0,0">
          <item>
@@ -885,6 +839,59 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="settingsTab">
+      <attribute name="title">
+       <string>Settings</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <layout class="QFormLayout" name="layoutOutputDirectory">
+         <item row="0" column="0">
+          <widget class="QLabel" name="labelOutputDirectory">
+           <property name="text">
+            <string>Output directory:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <layout class="QHBoxLayout" name="layoutOutputDirectoryInput">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QLineEdit" name="outputDirectory"/>
+           </item>
+           <item>
+            <widget class="QPushButton" name="selectOutputDirectory">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>29</width>
+               <height>29</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>29</width>
+               <height>29</height>
+              </size>
+             </property>
+             <property name="text">
+              <string notr="true">...</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
      <widget class="QWidget" name="helpTab">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -936,9 +943,6 @@
    <header>qgspasswordlineedit.h</header>
   </customwidget>
  </customwidgets>
- <tabstops>
-  <tabstop>tabWidget</tabstop>
- </tabstops>
  <resources/>
  <connections>
   <connection>
