ui: raise aoi combo show limit to 30

--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -62,6 +62,9 @@
          </item>
          <item row="1" column="1">
           <widget class="QgsMapLayerComboBox" name="polygonCombo">
+           <property name="maxVisibleItems">
+            <number>30</number>
+           </property>
            <property name="allowEmptyLayer">
             <bool>false</bool>
            </property>
