--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -16,6 +16,9 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
+     <property name="tabShape">
+      <enum>QTabWidget::Rounded</enum>
+     </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
@@ -368,6 +371,227 @@
         </layout>
        </item>
       </layout>
+     </widget>
+     <widget class="QWidget" name="DataCatalogTab">
+      <attribute name="title">
+       <string>Data</string>
+      </attribute>
+      <widget class="QPushButton" name="uploadButton">
+       <property name="geometry">
+        <rect>
+         <x>425</x>
+         <y>10</y>
+         <width>90</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Upload</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="filePathEdit">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>351</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="selectTifCatalog">
+       <property name="geometry">
+        <rect>
+         <x>368</x>
+         <y>10</y>
+         <width>51</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+      <widget class="QTableWidget" name="mosaics_table_widget">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>80</y>
+         <width>640</width>
+         <height>192</height>
+        </rect>
+       </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="tabKeyNavigation">
+        <bool>false</bool>
+       </property>
+       <property name="showDropIndicator" stdset="0">
+        <bool>false</bool>
+       </property>
+       <property name="dragDropOverwriteMode">
+        <bool>false</bool>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <property name="rowCount">
+        <number>0</number>
+       </property>
+       <attribute name="horizontalHeaderMinimumSectionSize">
+        <number>200</number>
+       </attribute>
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>300</number>
+       </attribute>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="verticalHeaderMinimumSectionSize">
+        <number>30</number>
+       </attribute>
+       <attribute name="verticalHeaderDefaultSectionSize">
+        <number>30</number>
+       </attribute>
+       <column>
+        <property name="text">
+         <string>mosaic</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>tags</string>
+        </property>
+       </column>
+      </widget>
+      <widget class="QPushButton" name="loadMosaicsButton">
+       <property name="geometry">
+        <rect>
+         <x>660</x>
+         <y>80</y>
+         <width>111</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Load mosaics</string>
+       </property>
+      </widget>
+      <widget class="QTableWidget" name="mosaic_images_table">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>320</y>
+         <width>430</width>
+         <height>190</height>
+        </rect>
+       </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="tabKeyNavigation">
+        <bool>false</bool>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::ExtendedSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+       <attribute name="horizontalHeaderMinimumSectionSize">
+        <number>90</number>
+       </attribute>
+       <attribute name="horizontalHeaderDefaultSectionSize">
+        <number>150</number>
+       </attribute>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+      </widget>
+      <widget class="QLabel" name="mosaic_images_label">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>300</y>
+         <width>111</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Mosaic Images</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="image_preview_label">
+       <property name="geometry">
+        <rect>
+         <x>460</x>
+         <y>320</y>
+         <width>190</width>
+         <height>190</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="mosaic_id_to_update">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>40</y>
+         <width>351</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="readOnly">
+        <bool>false</bool>
+       </property>
+       <property name="placeholderText">
+        <string>type here mosaic id to be updated </string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="uploadToExistingMosaic">
+       <property name="geometry">
+        <rect>
+         <x>370</x>
+         <y>42</y>
+         <width>251</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Upload image to existing mosaic</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="deleteMosaicButton">
+       <property name="geometry">
+        <rect>
+         <x>660</x>
+         <y>113</y>
+         <width>111</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Delete mosaic</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QWidget" name="providersTab">
       <attribute name="title">
